--- a/orosh/scenarios/3p_Orosh.cfg
+++ b/orosh/scenarios/3p_Orosh.cfg
@@ -1,6 +1,28 @@
-# 3p-Orosh v6.1 (updated for Wesnoth 1.12)
+# 3p-Orosh v7.0 (updated for Wesnoth 1.12)
 # by Dovolente - March 2011
 # by Zooko, Irby, Elliot, and Graeme in 2014 and 2015
+
+
+#define CLEAR_BONUS_LABELS
+	{SET_LABEL 13 10 "(int)"}
+	{SET_LABEL 16 8 "(int)"}
+	{SET_LABEL 17 5 "(pow)"}
+	{SET_LABEL 15 10 "(qui)"}
+	{SET_LABEL 12 8 "(qui)"}
+	{SET_LABEL 9 6 "(exp)"}
+	{SET_LABEL 11 18 "(exp)"}
+	{SET_LABEL 6 12 "(pow)"}
+	{SET_LABEL 12 11 "(qui)"}
+	{SET_LABEL 12 14 "(qui)"}
+	{SET_LABEL 13 13 "(int)"}
+	{SET_LABEL 10 11 "(int)"}
+	{SET_LABEL 15 13 "(qui)"}
+	{SET_LABEL 18 11 "(qui)"}
+	{SET_LABEL 22 10 "(exp)"}
+	{SET_LABEL 16 11 "(int)"}
+	{SET_LABEL 16 14 "(int)"}
+	{SET_LABEL 19 17 "(pow)"}
+#enddef
 
 [multiplayer]
 	id=Dov_MP_Orosh
@@ -18,7 +40,7 @@
 	#enddef
 
 	map_data="{~add-ons/orosh/maps/orosh.map}"
-	description= _ "A 3-Player Survival Scenario. Work together to protect a powerful shrine from hordes of invaders. Win by surviving until turn 44. At the start of their turn, a unit on the right hexes gets a trait."
+	description= _ "A 3-Player Survival Scenario. Work together to protect a powerful shrine from hordes of invaders. Win by surviving until turn 44. At the start of each turn, a unit on the right hexes gets a trait."
 	turns="-1"
 	victory_when_enemies_defeated=no
 	experience_modifier=70%
@@ -44,14 +66,14 @@
  			[goal]
  				name=target_location
  				[criteria] #NOTE: this is a SLF, because we're targeting a location
- 					x,y=14,9
+ 					x,y=16,8
  				[/criteria]
  				value=500000
  			[/goal]
  			[goal]
  				name=target_location
  				[criteria] #NOTE: this is a SLF, because we're targeting a location
- 					x,y=14,10
+ 					x,y=17,5
  				[/criteria]
  				value=500000
  			[/goal]
@@ -61,7 +83,35 @@
  					x,y=15,10
  				[/criteria]
  				value=500000
+ 			[/goal]
+ 			[goal]
+ 				name=target_location
+ 				[criteria] #NOTE: this is a SLF, because we're targeting a location
+ 					x,y=12,8
+ 				[/criteria]
+ 				value=500000
+ 			[/goal]
+ 			[goal]
+ 				name=target_location
+ 				[criteria] #NOTE: this is a SLF, because we're targeting a location
+ 					x,y=9,6
+ 				[/criteria]
+ 				value=500000
 			[/goal]
+ 			[goal]
+ 				name=target_location
+ 				[criteria] #NOTE: this is a SLF, because we're targeting a location
+ 					x,y=11,18
+ 				[/criteria]
+ 				value=500000
+ 			[/goal]
+ 			[goal]
+ 				name=target_location
+ 				[criteria] #NOTE: this is a SLF, because we're targeting a location
+ 					x,y=6,12
+ 				[/criteria]
+ 				value=500000
+ 			[/goal]
  			[goal]
  				name=target_location
  				[criteria] #NOTE: this is a SLF, because we're targeting a location
@@ -72,14 +122,7 @@
  			[goal]
  				name=target_location
  				[criteria] #NOTE: this is a SLF, because we're targeting a location
- 					x,y=12,12
- 				[/criteria]
- 				value=500000
- 			[/goal]
- 			[goal]
- 				name=target_location
- 				[criteria] #NOTE: this is a SLF, because we're targeting a location
- 					x,y=13,12
+ 					x,y=12,14
  				[/criteria]
  				value=500000
  			[/goal]
@@ -93,7 +136,21 @@
  			[goal]
  				name=target_location
  				[criteria] #NOTE: this is a SLF, because we're targeting a location
- 					x,y=15,12
+ 					x,y=10,11
+ 				[/criteria]
+ 				value=500000
+ 			[/goal]
+ 			[goal]
+ 				name=target_location
+ 				[criteria] #NOTE: this is a SLF, because we're targeting a location
+ 					x,y=15,13
+ 				[/criteria]
+ 				value=500000
+ 			[/goal]
+ 			[goal]
+ 				name=target_location
+ 				[criteria] #NOTE: this is a SLF, because we're targeting a location
+ 					x,y=18,11
  				[/criteria]
  				value=500000
  			[/goal]
@@ -107,14 +164,21 @@
  			[goal]
  				name=target_location
  				[criteria] #NOTE: this is a SLF, because we're targeting a location
- 					x,y=16,12
+ 					x,y=16,14
  				[/criteria]
  				value=500000
  			[/goal]
  			[goal]
  				name=target_location
  				[criteria] #NOTE: this is a SLF, because we're targeting a location
- 					x,y=15,13
+ 					x,y=19,17
+ 				[/criteria]
+ 				value=500000
+ 			[/goal]
+ 			[goal]
+ 				name=target_location
+ 				[criteria] #NOTE: this is a SLF, because we're targeting a location
+ 					x,y=22,10
  				[/criteria]
  				value=500000
  			[/goal]
@@ -146,14 +210,14 @@
  			[goal]
  				name=target_location
  				[criteria] #NOTE: this is a SLF, because we're targeting a location
- 					x,y=14,9
+ 					x,y=16,8
  				[/criteria]
  				value=500000
  			[/goal]
  			[goal]
  				name=target_location
  				[criteria] #NOTE: this is a SLF, because we're targeting a location
- 					x,y=14,10
+ 					x,y=17,5
  				[/criteria]
  				value=500000
  			[/goal]
@@ -163,7 +227,35 @@
  					x,y=15,10
  				[/criteria]
  				value=500000
+ 			[/goal]
+ 			[goal]
+ 				name=target_location
+ 				[criteria] #NOTE: this is a SLF, because we're targeting a location
+ 					x,y=12,8
+ 				[/criteria]
+ 				value=500000
+ 			[/goal]
+ 			[goal]
+ 				name=target_location
+ 				[criteria] #NOTE: this is a SLF, because we're targeting a location
+ 					x,y=9,6
+ 				[/criteria]
+ 				value=500000
 			[/goal]
+ 			[goal]
+ 				name=target_location
+ 				[criteria] #NOTE: this is a SLF, because we're targeting a location
+ 					x,y=11,18
+ 				[/criteria]
+ 				value=500000
+ 			[/goal]
+ 			[goal]
+ 				name=target_location
+ 				[criteria] #NOTE: this is a SLF, because we're targeting a location
+ 					x,y=6,12
+ 				[/criteria]
+ 				value=500000
+ 			[/goal]
  			[goal]
  				name=target_location
  				[criteria] #NOTE: this is a SLF, because we're targeting a location
@@ -174,14 +266,7 @@
  			[goal]
  				name=target_location
  				[criteria] #NOTE: this is a SLF, because we're targeting a location
- 					x,y=12,12
- 				[/criteria]
- 				value=500000
- 			[/goal]
- 			[goal]
- 				name=target_location
- 				[criteria] #NOTE: this is a SLF, because we're targeting a location
- 					x,y=13,12
+ 					x,y=12,14
  				[/criteria]
  				value=500000
  			[/goal]
@@ -195,7 +280,21 @@
  			[goal]
  				name=target_location
  				[criteria] #NOTE: this is a SLF, because we're targeting a location
- 					x,y=15,12
+ 					x,y=10,11
+ 				[/criteria]
+ 				value=500000
+ 			[/goal]
+ 			[goal]
+ 				name=target_location
+ 				[criteria] #NOTE: this is a SLF, because we're targeting a location
+ 					x,y=15,13
+ 				[/criteria]
+ 				value=500000
+ 			[/goal]
+ 			[goal]
+ 				name=target_location
+ 				[criteria] #NOTE: this is a SLF, because we're targeting a location
+ 					x,y=18,11
  				[/criteria]
  				value=500000
  			[/goal]
@@ -209,14 +308,21 @@
  			[goal]
  				name=target_location
  				[criteria] #NOTE: this is a SLF, because we're targeting a location
- 					x,y=16,12
+ 					x,y=16,14
  				[/criteria]
  				value=500000
  			[/goal]
  			[goal]
  				name=target_location
  				[criteria] #NOTE: this is a SLF, because we're targeting a location
- 					x,y=15,13
+ 					x,y=19,17
+ 				[/criteria]
+ 				value=500000
+ 			[/goal]
+ 			[goal]
+ 				name=target_location
+ 				[criteria] #NOTE: this is a SLF, because we're targeting a location
+ 					x,y=22,10
  				[/criteria]
  				value=500000
  			[/goal]
@@ -248,14 +354,14 @@
  			[goal]
  				name=target_location
  				[criteria] #NOTE: this is a SLF, because we're targeting a location
- 					x,y=14,9
+ 					x,y=16,8
  				[/criteria]
  				value=500000
  			[/goal]
  			[goal]
  				name=target_location
  				[criteria] #NOTE: this is a SLF, because we're targeting a location
- 					x,y=14,10
+ 					x,y=17,5
  				[/criteria]
  				value=500000
  			[/goal]
@@ -265,7 +371,35 @@
  					x,y=15,10
  				[/criteria]
  				value=500000
+ 			[/goal]
+ 			[goal]
+ 				name=target_location
+ 				[criteria] #NOTE: this is a SLF, because we're targeting a location
+ 					x,y=12,8
+ 				[/criteria]
+ 				value=500000
+ 			[/goal]
+ 			[goal]
+ 				name=target_location
+ 				[criteria] #NOTE: this is a SLF, because we're targeting a location
+ 					x,y=9,6
+ 				[/criteria]
+ 				value=500000
 			[/goal]
+ 			[goal]
+ 				name=target_location
+ 				[criteria] #NOTE: this is a SLF, because we're targeting a location
+ 					x,y=11,18
+ 				[/criteria]
+ 				value=500000
+ 			[/goal]
+ 			[goal]
+ 				name=target_location
+ 				[criteria] #NOTE: this is a SLF, because we're targeting a location
+ 					x,y=6,12
+ 				[/criteria]
+ 				value=500000
+ 			[/goal]
  			[goal]
  				name=target_location
  				[criteria] #NOTE: this is a SLF, because we're targeting a location
@@ -276,14 +410,7 @@
  			[goal]
  				name=target_location
  				[criteria] #NOTE: this is a SLF, because we're targeting a location
- 					x,y=12,12
- 				[/criteria]
- 				value=500000
- 			[/goal]
- 			[goal]
- 				name=target_location
- 				[criteria] #NOTE: this is a SLF, because we're targeting a location
- 					x,y=13,12
+ 					x,y=12,14
  				[/criteria]
  				value=500000
  			[/goal]
@@ -297,7 +424,21 @@
  			[goal]
  				name=target_location
  				[criteria] #NOTE: this is a SLF, because we're targeting a location
- 					x,y=15,12
+ 					x,y=10,11
+ 				[/criteria]
+ 				value=500000
+ 			[/goal]
+ 			[goal]
+ 				name=target_location
+ 				[criteria] #NOTE: this is a SLF, because we're targeting a location
+ 					x,y=15,13
+ 				[/criteria]
+ 				value=500000
+ 			[/goal]
+ 			[goal]
+ 				name=target_location
+ 				[criteria] #NOTE: this is a SLF, because we're targeting a location
+ 					x,y=18,11
  				[/criteria]
  				value=500000
  			[/goal]
@@ -311,14 +452,21 @@
  			[goal]
  				name=target_location
  				[criteria] #NOTE: this is a SLF, because we're targeting a location
- 					x,y=16,12
+ 					x,y=16,14
  				[/criteria]
  				value=500000
  			[/goal]
  			[goal]
  				name=target_location
  				[criteria] #NOTE: this is a SLF, because we're targeting a location
- 					x,y=15,13
+ 					x,y=19,17
+ 				[/criteria]
+ 				value=500000
+ 			[/goal]
+ 			[goal]
+ 				name=target_location
+ 				[criteria] #NOTE: this is a SLF, because we're targeting a location
+ 					x,y=22,10
  				[/criteria]
  				value=500000
  			[/goal]
@@ -346,6 +494,134 @@
 		no_leader=yes
  		[ai]
  			{EXPERIMENTAL_AI}
+ 			caution=1.5 # XXX change this to be completely aggressive?
+ 			grouping="offensive"
+ 			[goal]
+ 				name=target_location
+ 				[criteria] #NOTE: this is a SLF, because we're targeting a location
+ 					x,y=13,10
+ 				[/criteria]
+ 				value=500000
+ 			[/goal]
+ 			[goal]
+ 				name=target_location
+ 				[criteria] #NOTE: this is a SLF, because we're targeting a location
+ 					x,y=16,8
+ 				[/criteria]
+ 				value=500000
+ 			[/goal]
+ 			[goal]
+ 				name=target_location
+ 				[criteria] #NOTE: this is a SLF, because we're targeting a location
+ 					x,y=17,5
+ 				[/criteria]
+ 				value=500000
+ 			[/goal]
+ 			[goal]
+ 				name=target_location
+ 				[criteria] #NOTE: this is a SLF, because we're targeting a location
+ 					x,y=15,10
+ 				[/criteria]
+ 				value=500000
+ 			[/goal]
+ 			[goal]
+ 				name=target_location
+ 				[criteria] #NOTE: this is a SLF, because we're targeting a location
+ 					x,y=12,8
+ 				[/criteria]
+ 				value=500000
+ 			[/goal]
+ 			[goal]
+ 				name=target_location
+ 				[criteria] #NOTE: this is a SLF, because we're targeting a location
+ 					x,y=9,6
+ 				[/criteria]
+ 				value=500000
+			[/goal]
+ 			[goal]
+ 				name=target_location
+ 				[criteria] #NOTE: this is a SLF, because we're targeting a location
+ 					x,y=11,18
+ 				[/criteria]
+ 				value=500000
+ 			[/goal]
+ 			[goal]
+ 				name=target_location
+ 				[criteria] #NOTE: this is a SLF, because we're targeting a location
+ 					x,y=6,12
+ 				[/criteria]
+ 				value=500000
+ 			[/goal]
+ 			[goal]
+ 				name=target_location
+ 				[criteria] #NOTE: this is a SLF, because we're targeting a location
+ 					x,y=12,11
+ 				[/criteria]
+ 				value=500000
+ 			[/goal]
+ 			[goal]
+ 				name=target_location
+ 				[criteria] #NOTE: this is a SLF, because we're targeting a location
+ 					x,y=12,14
+ 				[/criteria]
+ 				value=500000
+ 			[/goal]
+ 			[goal]
+ 				name=target_location
+ 				[criteria] #NOTE: this is a SLF, because we're targeting a location
+ 					x,y=13,13
+ 				[/criteria]
+ 				value=500000
+ 			[/goal]
+ 			[goal]
+ 				name=target_location
+ 				[criteria] #NOTE: this is a SLF, because we're targeting a location
+ 					x,y=10,11
+ 				[/criteria]
+ 				value=500000
+ 			[/goal]
+ 			[goal]
+ 				name=target_location
+ 				[criteria] #NOTE: this is a SLF, because we're targeting a location
+ 					x,y=15,13
+ 				[/criteria]
+ 				value=500000
+ 			[/goal]
+ 			[goal]
+ 				name=target_location
+ 				[criteria] #NOTE: this is a SLF, because we're targeting a location
+ 					x,y=18,11
+ 				[/criteria]
+ 				value=500000
+ 			[/goal]
+ 			[goal]
+ 				name=target_location
+ 				[criteria] #NOTE: this is a SLF, because we're targeting a location
+ 					x,y=16,11
+ 				[/criteria]
+ 				value=500000
+ 			[/goal]
+ 			[goal]
+ 				name=target_location
+ 				[criteria] #NOTE: this is a SLF, because we're targeting a location
+ 					x,y=16,14
+ 				[/criteria]
+ 				value=500000
+ 			[/goal]
+ 			[goal]
+ 				name=target_location
+ 				[criteria] #NOTE: this is a SLF, because we're targeting a location
+ 					x,y=19,17
+ 				[/criteria]
+ 				value=500000
+ 			[/goal]
+ 			[goal]
+ 				name=target_location
+ 				[criteria] #NOTE: this is a SLF, because we're targeting a location
+ 					x,y=22,10
+ 				[/criteria]
+ 				value=500000
+ 			[/goal]
  	        [/ai]
 	[/side]
 
@@ -366,7 +642,7 @@
 				condition=win
 			[/objective]
 			[note]
-				description=_"At the start of your turn, any of your units may receive a bonus if they are within the castle walls and on the grassy area on your side of the shrine. v6.1.96"
+				description=_"At the start of your turn, any of your units may receive a bonus if they are within the castle walls and on the grassy area on your side of the shrine. v7.0.99"
 			[/note]
 			[note]
 				description=_"Bonuses: strong, intelligent, dextrous, quick"
@@ -463,9 +739,11 @@
 		first_time_only=no
 		{CLEAR_BONUS_LABELS}
 		{INTELLIGENT_EMPOWERMENT 13 10}
-		{POWERFUL_EMPOWERMENT 14 9}
-		{QUICK_EMPOWERMENT 14 10}
-		{EXPERT_EMPOWERMENT 15 10}
+		{INTELLIGENT_EMPOWERMENT 16 8}
+		{POWERFUL_EMPOWERMENT 17 5}
+		{QUICK_EMPOWERMENT 15 10}
+		{QUICK_EMPOWERMENT 12 8}
+		{EXPERT_EMPOWERMENT 9 6}
 	[/event]
 
 	[event]
@@ -473,10 +751,12 @@
 		id=side_2_turn
 		first_time_only=no
 		{CLEAR_BONUS_LABELS}
-		{EXPERT_EMPOWERMENT 12 11}
-		{POWERFUL_EMPOWERMENT 12 12}
-		{QUICK_EMPOWERMENT 13 12}
+		{EXPERT_EMPOWERMENT 11 18}
+		{POWERFUL_EMPOWERMENT 6 12}
+		{QUICK_EMPOWERMENT 12 11}
+		{QUICK_EMPOWERMENT 12 14}
 		{INTELLIGENT_EMPOWERMENT 13 13}
+		{INTELLIGENT_EMPOWERMENT 10 11}
 	[/event]
 
 	[event]
@@ -484,10 +764,12 @@
 		id=side_3_turn
 		first_time_only=no
 		{CLEAR_BONUS_LABELS}
-		{QUICK_EMPOWERMENT 15 12}
-		{EXPERT_EMPOWERMENT 15 13}
+		{QUICK_EMPOWERMENT 15 13}
+		{QUICK_EMPOWERMENT 18 11}
+		{EXPERT_EMPOWERMENT 22 10}
 		{INTELLIGENT_EMPOWERMENT 16 11}
-		{POWERFUL_EMPOWERMENT 16 12}
+		{INTELLIGENT_EMPOWERMENT 16 14}
+		{POWERFUL_EMPOWERMENT 19 17}
 	[/event]
 
 	{DOV_WAVE 1 (
@@ -496,7 +778,7 @@
 	)}
 
 	{DOV_WAVE 2 (
-		{LAND_A_2 "Thug"}{LAND_B_3 "Peasant"}
+		{LAND_A_1 "Thug"}{LAND_B_3 "Peasant"}
 		{VARIABLE next_wave_turn 5}
 		{VARIABLE next_wave_label "Ghosts"}
 	)}
@@ -525,7 +807,7 @@
 	{DOV_WAVE 12 (
 		{LAND_B_2 "Orcish Archer"}
 		{LAND_A_1 "Troll"}
-		{LAND_A_2 "Wolf Rider"}
+		{LAND_A_1 "Wolf Rider"}
 		{VARIABLE next_wave_turn 17}
 		{VARIABLE next_wave_label "Elves"}
 	)}
