Added Power-Up-Less Copy Changed Story Text Added Defeat upon enemy stepping in the center

--- a/orosh/_main.cfg
+++ b/orosh/_main.cfg
@@ -15,6 +15,7 @@
 	{~add-ons/orosh/macros/shops.cfg}
 
 	{~add-ons/orosh/scenarios/3p_Orosh.cfg}
+	{~add-ons/orosh/scenarios/3p_Orosh_No_Power-Ups.cfg}
 
 	{~add-ons/orosh/mods/drops_mod.cfg}
 	{~add-ons/orosh/mods/xp_mod.cfg}
