--- a/orosh/scenarios/3p_Orosh_No_Power-Ups.cfg
+++ b/orosh/scenarios/3p_Orosh_No_Power-Ups.cfg
@@ -2,31 +2,9 @@
 # by Dovolente - March 2011
 # by Zooko, Irby, Elliot, and Graeme in 2014 and 2015
 
-
-#define CLEAR_BONUS_LABELS
-	{SET_LABEL 13 10 "(int)"}
-	{SET_LABEL 16 8 "(int)"}
-	{SET_LABEL 17 5 "(pow)"}
-	{SET_LABEL 15 10 "(qui)"}
-	{SET_LABEL 12 8 "(qui)"}
-	{SET_LABEL 9 6 "(exp)"}
-	{SET_LABEL 11 18 "(exp)"}
-	{SET_LABEL 6 12 "(pow)"}
-	{SET_LABEL 12 11 "(qui)"}
-	{SET_LABEL 12 14 "(qui)"}
-	{SET_LABEL 13 13 "(int)"}
-	{SET_LABEL 10 11 "(int)"}
-	{SET_LABEL 15 13 "(qui)"}
-	{SET_LABEL 18 11 "(qui)"}
-	{SET_LABEL 22 10 "(exp)"}
-	{SET_LABEL 16 11 "(int)"}
-	{SET_LABEL 16 14 "(int)"}
-	{SET_LABEL 19 17 "(pow)"}
-#enddef
-
 [multiplayer]
-	id=Dov_MP_Orosh
-	name= _ "3p - Orosh"
+	id=Dov_MP_Orosh_No_Power-Ups
+	name= _ "3p - Orosh - No Power-Ups"
 	random_start_time=no
 
 	#define OROSH_FIRST_UNIT TYPE X Y
@@ -686,11 +664,11 @@
 		name=start
 		[message]
 			side=1
-			message= _"There are rumors of gathering armies, preparing to attack us! They wish to draw upon the mystic powers themselves.!"
+			message= _"There are rumors of gathering armies, preparing to attack us! They wish to take the power of the shrine for themselves!"
 		[/message]
 		[message]
 			side=2
-			message= _"We have sworn to defend Our Lady Orosh's shrine from such ruffians, while she sleeps. But to strengthen our defenses, we may need to take the power of the shrine for ourselves!"
+			message= _"We have sworn to defend Our Lady Orosh's shrine from such ruffians, while she sleeps. We shall not abuse her power, even to destroy these invaders."
 		[/message]
 		[message]
 			side=3
@@ -781,12 +759,6 @@
 		id=side_1_turn
 		first_time_only=no
 		{CLEAR_BONUS_LABELS}
-		{INTELLIGENT_EMPOWERMENT 13 10}
-		{INTELLIGENT_EMPOWERMENT 16 8}
-		{POWERFUL_EMPOWERMENT 17 5}
-		{QUICK_EMPOWERMENT 15 10}
-		{QUICK_EMPOWERMENT 12 8}
-		{EXPERT_EMPOWERMENT 9 6}
 	[/event]
 
 	[event]
@@ -794,12 +766,6 @@
 		id=side_2_turn
 		first_time_only=no
 		{CLEAR_BONUS_LABELS}
-		{EXPERT_EMPOWERMENT 11 18}
-		{POWERFUL_EMPOWERMENT 6 12}
-		{QUICK_EMPOWERMENT 12 11}
-		{QUICK_EMPOWERMENT 12 14}
-		{INTELLIGENT_EMPOWERMENT 13 13}
-		{INTELLIGENT_EMPOWERMENT 10 11}
 	[/event]
 
 	[event]
@@ -807,12 +773,6 @@
 		id=side_3_turn
 		first_time_only=no
 		{CLEAR_BONUS_LABELS}
-		{QUICK_EMPOWERMENT 15 13}
-		{QUICK_EMPOWERMENT 18 11}
-		{EXPERT_EMPOWERMENT 22 10}
-		{INTELLIGENT_EMPOWERMENT 16 11}
-		{INTELLIGENT_EMPOWERMENT 16 14}
-		{POWERFUL_EMPOWERMENT 19 17}
 	[/event]
 
 	{DOV_WAVE 1 (
